fix to image overflow of egoods on in library page

--- a/webroot/less/egoods.less
+++ b/webroot/less/egoods.less
@@ -15,7 +15,7 @@
 .items .item:hover{box-shadow: inset 0px 0px 5px #E32;-webkit-transition:box-shadow 1s ease;-moz-transition:box-shadow 1s ease;-o-transition:box-shadow 1s ease;transition:box-shadow 1s ease;}
 .items .item hr{margin: 5px 0px;}
 .items .item .item-image{max-height: 150px;}
-.items .item .item-image img{padding: 5px 0px;height: 140px;width: auto;display: block;margin: 0 auto;max-width:210px;}
+.items .item .item-image img{padding: 5px 0px;height: 140px;width: auto;display: block;margin: 0 auto;max-width:100%;}
 .items .item .item-details h5{text-align: center;height: 45px;overflow: hidden;}
 .items .item .item-details h5 a{color: #666;font-weight: bold;}
 .items .item .item-details h5 a:hover{text-decoration: none;}
